@@ -21,6 +21,7 @@ postgresql-common (137) UNRELEASED; urgency=low
     (Compatibility workaround for lenny.)
   * testsuite: Note that Test::More 0.87 is required for done_testing() in
     170_extensions.
+  * testsuite 005_PgCommon: Add next_free_port tests (using /bin/nc).
   * supported-versions: Make output configurable via $PG_SUPPORTED_VERSIONS,
     ~/.pg_supported_versions, and /etc/postgresql-common/supported_versions.
     (Closes: #646700)
